manifests/1-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: airbyte
  labels:
    name: airbyte
