manifests/bootloader.yaml
# Source: airbyte/charts/airbyte-bootloader/templates/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: airbyte-airbyte-bootloader
  namespace: airbyte
  labels:
    app.kubernetes.io/name: airbyte-bootloader
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.53.1"
    app.kubernetes.io/managed-by: Helm
spec:
  serviceAccountName: airbyte-admin
  restartPolicy: Never
  containers:
    - name: airbyte-bootloader-container
      image: airbyte/bootloader:0.53.1
      imagePullPolicy: "IfNotPresent"
      resources:
        limits: {}
        requests: {}
