manifests/cron.yaml
---
# Source: airbyte/charts/cron/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbyte-cron
  namespace: airbyte
  labels:
    app.kubernetes.io/name: cron
    app.kubernetes.io/instance: airbyte
    app.kubernetes.io/version: "0.53.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cron
      app.kubernetes.io/instance: airbyte
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cron
        app.kubernetes.io/instance: airbyte
    spec:
      serviceAccountName: airbyte-admin
      automountServiceAccountToken: true
      containers:
        - name: airbyte-cron
          image: airbyte/cron:0.53.1
          imagePullPolicy: "IfNotPresent"
          resources:
            limits: {}
            requests: {}
