manifests/pod-sweeper.yaml
---
# Source: airbyte/charts/pod-sweeper/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbyte-pod-sweeper-pod-sweeper
  namespace: airbyte
  labels:
    app.kubernetes.io/name: pod-sweeper
    app.kubernetes.io/instance: airbyte
    app.kubernetes.io/version: "0.53.1"
    namespace: airbyte
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pod-sweeper
      app.kubernetes.io/instance: airbyte
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pod-sweeper
        app.kubernetes.io/instance: airbyte
      annotations:
        checksum/sweep-pod-script: d1786e621c651f919e95156a29dd92f30d044b80db88f57fbbe5afe233714d16
    spec:
      serviceAccountName: airbyte-admin
      containers:
      - name: airbyte-pod-sweeper
        image: bitnami/kubectl:1.28.4
        imagePullPolicy: "IfNotPresent"
        volumeMounts:
        - mountPath: /script/sweep-pod.sh
          subPath: sweep-pod.sh
          name: sweep-pod-script
        - mountPath: /.kube
          name: kube-config
        command: ["/bin/bash", "-c", /script/sweep-pod.sh]
        resources:
          limits: {}
          requests: {}
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -ec
            - grep -aq sweep-pod.sh /proc/1/cmdline
          initialDelaySeconds: 5
          periodSeconds: 30
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -ec
            - grep -aq sweep-pod.sh /proc/1/cmdline
          initialDelaySeconds: 5
          periodSeconds: 30
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
      volumes:
      - name: kube-config
        emptyDir: {}
      - name: sweep-pod-script
        configMap:
          name: airbyte-pod-sweeper-sweep-pod-script
          defaultMode: 0755
