manifests/4-db.yaml
---
# Source: airbyte/templates/airbyte-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: airbyte-db
  namespace: airbyte
  labels:
    app.kubernetes.io/name: airbyte-db
    app.kubernetes.io/instance: airbyte
    app.kubernetes.io/version: "0.53.1"
spec:
  replicas: 1
  serviceName: airbyte-db-svc
  selector:
    matchLabels:
      app.kubernetes.io/name: airbyte-db
      app.kubernetes.io/instance: airbyte
  template:
    metadata:
      labels:
        app.kubernetes.io/name: airbyte-db
        app.kubernetes.io/instance: airbyte
    spec:
      containers:
        - name: airbyte-db-container
          image: "airbyte/db:0.53.1"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: airbyte-volume-db
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
  - metadata:
      name: airbyte-volume-db
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 500Mi
---
# Source: airbyte/templates/airbyte-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: airbyte-db-svc
  namespace: airbyte
  labels:
    app.kubernetes.io/name: airbyte-db
    app.kubernetes.io/instance: airbyte
    app.kubernetes.io/version: "0.53.1"
spec:
  type: ClusterIP
  ports:
    - port: 5432
      protocol: TCP
  selector:
    app.kubernetes.io/name: airbyte-db
    app.kubernetes.io/instance: airbyte
