manifests/server.yaml
---
# Source: airbyte/charts/airbyte-api-server/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: airbyte-airbyte-api-server
    namespace: airbyte
    labels:
        app.kubernetes.io/name: airbyte-api-server
        app.kubernetes.io/instance: airbyte
        app.kubernetes.io/version: "0.53.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: airbyte-api-server
      app.kubernetes.io/instance: airbyte
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: airbyte-api-server
        app.kubernetes.io/instance: airbyte
    spec:
      serviceAccountName: airbyte-admin
      containers:
      - name: airbyte-api-server
        image: airbyte/airbyte-api-server:0.53.1
        imagePullPolicy: "IfNotPresent"
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3

        ports:
        - name: http
          containerPort: 8006
          protocol: TCP
        resources:
          limits: {}
          requests: {}
        volumeMounts:
      volumes:
---
# Source: airbyte/charts/airbyte-api-server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airbyte-airbyte-api-server-svc
  namespace: airbyte
  labels:
    app.kubernetes.io/name: airbyte-api-server
    app.kubernetes.io/instance: airbyte
    app.kubernetes.io/version: "0.53.1"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: airbyte-api-server
    app.kubernetes.io/instance: airbyte
---
# Source: airbyte/charts/server/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbyte-server
  namespace: airbyte
  labels:
    app.kubernetes.io/name: server
    app.kubernetes.io/instance: airbyte
    app.kubernetes.io/version: "0.53.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: server
      app.kubernetes.io/instance: airbyte
  strategy:
    type: Recreate # Needed due to volume claims
  template:
    metadata:
      labels:
        app.kubernetes.io/name: server
        app.kubernetes.io/instance: airbyte
    spec:
      serviceAccountName: airbyte-admin
      containers:
      - name: airbyte-server-container
        image: airbyte/server:0.53.1
        imagePullPolicy: "IfNotPresent"
        livenessProbe:
          httpGet:
            path: /api/v1/health
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /api/v1/health
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        ports:
        - name: http
          containerPort: 8001
          protocol: TCP
        resources:
          limits: {}
          requests: {}
        volumeMounts:
        - name: airbyte-yml-volume
          mountPath: /app/configs/airbyte.yml
          subPath: fileContents
          readOnly: true
      volumes:
      - name: airbyte-yml-volume
        secret:
          secretName: airbyte-airbyte-yml
---
# Source: airbyte/charts/server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airbyte-airbyte-server-svc
  namespace: airbyte
  labels:
    app.kubernetes.io/name: server
    app.kubernetes.io/instance: airbyte
    app.kubernetes.io/version: "0.53.1"
spec:
  type: ClusterIP
  ports:
  - port: 8001
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: server
    app.kubernetes.io/instance: airbyte
