manifests/temporal.yaml
---
# Source: airbyte/charts/temporal/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbyte-temporal
  namespace: airbyte
  labels:
    app.kubernetes.io/name: temporal
    app.kubernetes.io/instance: airbyte
    app.kubernetes.io/version: "0.53.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: temporal
      app.kubernetes.io/instance: airbyte
  template:
    metadata:
      labels:
        app.kubernetes.io/name: temporal
        app.kubernetes.io/instance: airbyte
    spec:
      serviceAccountName: airbyte-admin
      containers:
      - name: airbyte-temporal
        image: temporalio/auto-setup:1.20.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7233
        volumeMounts:
        - name: airbyte-temporal-dynamicconfig
          mountPath: "/etc/temporal/config/dynamicconfig/"
        resources:
          limits: {}
          requests: {}
      volumes:
      - name: airbyte-temporal-dynamicconfig
        configMap:
          name: airbyte-temporal-dynamicconfig
          items:
          - key: development.yaml
            path: development.yaml
---
# Source: airbyte/charts/temporal/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airbyte-temporal
  namespace: airbyte
  labels:
    app.kubernetes.io/name: temporal
    app.kubernetes.io/instance: airbyte
    app.kubernetes.io/version: "0.53.1"
spec:
  type: ClusterIP
  ports:
  - port: 7233
    protocol: TCP
    targetPort: 7233
  selector:
    app.kubernetes.io/name: temporal
    app.kubernetes.io/instance: airbyte
