manifests/webapp.yaml
---
# Source: airbyte/charts/webapp/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbyte-webapp
  namespace: airbyte
  labels:
    app.kubernetes.io/name: webapp
    app.kubernetes.io/instance: airbyte
    app.kubernetes.io/version: "0.53.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: webapp
      app.kubernetes.io/instance: airbyte
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webapp
        app.kubernetes.io/instance: airbyte
    spec:
      serviceAccountName: airbyte-admin
      containers:
      - name: airbyte-webapp-container
        image: airbyte/webapp:0.53.1
        imagePullPolicy: "IfNotPresent"
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /index.html
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          limits: {}
          requests: {}
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/templates/
      volumes:
      - name: config
        configMap:
          name: airbyte-webapp-nginx
          items:
          - key: default.conf.template
            path: default.conf.template
---
# Source: airbyte/charts/webapp/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airbyte-airbyte-webapp-svc
  namespace: airbyte
  labels:
    app.kubernetes.io/name: webapp
    app.kubernetes.io/instance: airbyte
    app.kubernetes.io/version: "0.53.1"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: webapp
    app.kubernetes.io/instance: airbyte
